--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,14 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+.gallery {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.gallery_item {
+      margin: 30px 30px;
+  
+      
+  }
